
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dowhy-causal-decision-lab"
version = "0.1.0"
description = "Turn causal inference into a decision lab with assumption tracking, effect estimates, and stakeholder-friendly policy recommendations."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
